--- a/src/components/Jobs/Jobs.css
+++ b/src/components/Jobs/Jobs.css
@@ -1,10 +1,4 @@
 .job-container{
-    border: 1px solid gold;
+    border: 1px solid #E8E8E8;
     border-radius: 20px;
-}
-
-@media screen and (max-width: 576px){
-    .jobs-container{
-        
-    }
 }
